@@ -1,6 +1,7 @@
 1.1.1 (01.02.2013):
 
 * + support for tesseract 3.02.01
+* Fixed tesseract 3.00 support
 
 
 1.1.0 (18.11.2012):
